# gzweb-rs

./: Cargo.toml  Dockerfile.gazebo  README.md  build.sh  index.html  run.sh  tmp.sh
.agent/: CONTEXT.md  DESIGN.md
src/: asset_proxy.rs  fuel.rs  gz_msgs.rs  main.rs  scene.rs  websocket.rs
