[package]
name = "bevy_webgpu_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15", features = ["webgpu", "webgl2"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
wgpu = "23.0"
console_error_panic_hook = "0.1"
crossbeam-channel = "0.5"
prost = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bevy_panorbit_camera = "0.21.0"
uuid = { version = "1.21.0", features = ["v4", "js"] }

# Native-only dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tungstenite = "0.26"

# WASM-only dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "Element",
    "Node",
    "HtmlCanvasElement",
    "WebGl2RenderingContext",
    "WebSocket",
    "MessageEvent",
    "ErrorEvent",
    "CloseEvent",
    "Location",
    "FileReader",
    "BinaryType",
    "Blob",
]

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
