[package]
name = "bevy_webgpu_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.18", features = ["webgpu", "webgl2"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
wgpu = "27"
console_error_panic_hook = "0.1"
crossbeam-channel = "0.5"
prost = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bevy_panorbit_camera = "0.34.0"
bevy_obj = "0.18.2"
bevy_stl = { version = "0.18.0", default-features = false }
uuid = { version = "1.21.0", features = ["v4", "js"] }

# Native-only dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tungstenite = "0.26"
ureq = "3"

# WASM-only dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "Element",
    "Node",
    "HtmlCanvasElement",
    "WebGl2RenderingContext",
    "WebSocket",
    "MessageEvent",
    "ErrorEvent",
    "CloseEvent",
    "Location",
    "FileReader",
    "BinaryType",
    "Blob",
    "Headers",
    "Request",
    "RequestInit",
    "Response",
]

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
